// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders correctly 1`] = `
<div>
  <Row
    className="justify-content-center my-3"
    noGutters={false}
  >
    <Col
      md="3"
      sm="5"
    >
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Add new feature
      </Button>
      <Modal
        animation={true}
        autoFocus={true}
        backdrop={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={false}
      >
        <ModalHeader
          closeButton={false}
          closeLabel="Close"
        >
          <ModalTitle>
            New feature
          </ModalTitle>
        </ModalHeader>
        <ModalBody>
          <FeatureCardContainer
            onCancel={[Function]}
            onSubmit={[Function]}
          />
        </ModalBody>
      </Modal>
    </Col>
  </Row>
  <FeatureListContainer />
</div>
`;

exports[`Home renders feature card when clicking on Add new feature 1`] = `
<div>
  <Row
    className="justify-content-center my-3"
    noGutters={false}
  >
    <Col
      md="3"
      sm="5"
    >
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Add new feature
      </Button>
      <Modal
        animation={true}
        autoFocus={true}
        backdrop={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={true}
      >
        <ModalHeader
          closeButton={false}
          closeLabel="Close"
        >
          <ModalTitle>
            New feature
          </ModalTitle>
        </ModalHeader>
        <ModalBody>
          <FeatureCardContainer
            onCancel={[Function]}
            onSubmit={[Function]}
          />
        </ModalBody>
      </Modal>
    </Col>
  </Row>
  <FeatureListContainer />
</div>
`;

exports[`Home renders without feature card when clicking on Add new feature and then on Cancel 1`] = `
<div>
  <Row
    className="justify-content-center my-3"
    noGutters={false}
  >
    <Col
      md="3"
      sm="5"
    >
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Add new feature
      </Button>
      <Modal
        animation={true}
        autoFocus={true}
        backdrop={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={false}
      >
        <ModalHeader
          closeButton={false}
          closeLabel="Close"
        >
          <ModalTitle>
            New feature
          </ModalTitle>
        </ModalHeader>
        <ModalBody>
          <FeatureCardContainer
            onCancel={[Function]}
            onSubmit={[Function]}
          />
        </ModalBody>
      </Modal>
    </Col>
  </Row>
  <FeatureListContainer />
</div>
`;

exports[`Home renders without feature card when clicking on Add new feature and then on Submit 1`] = `
<div>
  <Row
    className="justify-content-center my-3"
    noGutters={false}
  >
    <Col
      md="3"
      sm="5"
    >
      <Button
        active={false}
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Add new feature
      </Button>
      <Modal
        animation={true}
        autoFocus={true}
        backdrop={true}
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={false}
      >
        <ModalHeader
          closeButton={false}
          closeLabel="Close"
        >
          <ModalTitle>
            New feature
          </ModalTitle>
        </ModalHeader>
        <ModalBody>
          <FeatureCardContainer
            onCancel={[Function]}
            onSubmit={[Function]}
          />
        </ModalBody>
      </Modal>
    </Col>
  </Row>
  <FeatureListContainer />
</div>
`;
